--- a/Components/AddTrainingScheduleDialog/AddTrainingScheduleDialogCard.axaml
+++ b/Components/AddTrainingScheduleDialog/AddTrainingScheduleDialogCard.axaml
@@ -187,7 +187,7 @@
                                         PlaceholderText="Pick a coach"
                                         shadui:ControlAssist.Label="Assign Coach"
                                         ItemsSource="{CompiledBinding CoachItems}"
-                                        SelectedItem="{CompiledBinding SelectedCoachItem}">
+                                        SelectedItem="{CompiledBinding SelectedCoachItem, Mode=TwoWay}">
                                     </ComboBox>
                                 </StackPanel>
                                 <StackPanel Spacing="10" Margin="0,0,0,0" HorizontalAlignment="Left">
